syntax = "proto3";
option java_multiple_files = true;
package com.robotdreams.usergrpcservice;

message UserResponse {
  int64 id = 1;
  string server_time = 4;
  string firstname = 5;
  string lastname = 6;
  string email = 7;
  string phone_number = 8;
  string address = 9;
  bool premium = 10;
}

message UserRequest{
  int64 userId = 1;
}

service UserService{
  rpc getUserById(UserRequest) returns (UserResponse);
}